# OptiITtack_LAB

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/mocap4r2_optitrack_driver/include/mocap4r2_optitrack_driver/: mocap4r2_optitrack_driver.hpp
install/mocap4r2_optitrack_driver/lib/mocap4r2_optitrack_driver/: mocap4r2_optitrack_driver_main
install/mocap4r2_optitrack_driver/share/mocap4r2_optitrack_driver/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/mocap4r2_optitrack_driver/share/mocap4r2_optitrack_driver/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  mocap4r2_optitrack_driverConfig-version.cmake  mocap4r2_optitrack_driverConfig.cmake
install/mocap4r2_optitrack_driver/share/mocap4r2_optitrack_driver/environment/: ament_prefix_path.dsv  (+2 more)
install/mocap_px4_bridge/lib/mocap_px4_bridge/: mocap_px4_bridge_ros2
install/mocap_px4_bridge/share/mocap_px4_bridge/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.ps1  package.sh  package.xml
install/px4_msgs/share/px4_msgs/: package.sh
log/: latest_build
src/mocap4ros2_optitrack/: README.md  dependency_repos.repos
src/mocap4ros2_optitrack/mocap4r2_optitrack_driver/config/: mocap4r2_optitrack_driver_params.yaml
src/mocap_px4_bridge/: CMakeLists.txt
src/mocap_px4_bridge/config/: params.yaml
src/mocap_px4_bridge/launch/: run.launch.py
src/mocap_px4_bridge/src/: mocap_px4_bridge.cpp  mocap_px4_bridge_ros2.cpp
(+16 files in other folders)
